--- a/pubs.html
+++ b/pubs.html
@@ -79,37 +79,42 @@
                 </h1>
 
 
-<p>85. Palkar, V., Aprelev, V.,  Salamatin, A., Brasovs. A., Kuksenok, O,,  Kornev, K.G.  <strong><a href= https://journals.aps.org/pre/abstract/10.1103/PhysRevE.100.051101
+<p>87. Choudhury, C. K.,  Palkar, V., Kuksenok, O. <strong><a href= https://pubs.acs.org/doi/pdf/10.1021/acs.langmuir.9b03486  
+>"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020)</em> </p>
+
+<p>86. Palkar, V., Aprelev, V.,  Salamatin, A., Brasovs. A., Kuksenok, O,,  Kornev, K.G.  <strong><a href= https://journals.aps.org/pre/abstract/10.1103/PhysRevE.100.051101
  
 >"Rotating magnetic nanorods detect minute fluctuations of magnetic field”</a></strong>. Phys. Rev. E 100, 051101 (2019) </p>
 
 
-<p>84. Tu, S., Choudhury, C. K., Luzinov, I., Kuksenok., O. <strong><a href= https://doi.org/10.1016/j.cossms.2019.01.003  
->"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. Current Opinion in Solid State and Materials Science (2019) </p>
+<p>85. Tu, S., Choudhury, C. K., Luzinov, I., Kuksenok., O. <strong><a href= https://doi.org/10.1016/j.cossms.2019.01.003  
+>"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. <em> Current Opinion in Solid State and Materials Science </em> , 23 (1), 50-61 (2019)</p>
 
 
-<p>83. Savchak, O., Morrison, T., Kornev, K.G. and Kuksenok, O. <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract>Controlling deformations of gel-based composites by electromagnetic signals within the GHz frequency range.</a></strong> <em>Soft matter</em>, 14(43), pp.8698-8708 (2018)</p>
+<p>84. Savchak, O., Morrison, T., Kornev, K.G. and Kuksenok, O. <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract>Controlling deformations of gel-based composites by electromagnetic signals within the GHz frequency range.</a></strong> <em>Soft matter</em>, 14(43), pp.8698-8708 (2018)</p>
 
-<p>82. Schiller, U.D. and Kuksenok, O., 2018. <strong>"Lattice-Boltzmann Modelling of Multicomponent Systems: An Introduction."</strong> <em>Reviews in Computational Chemistry</em>, 31, p.1. John Wiley & Sons (2018)</p>
+<p>83. Schiller, U.D. and Kuksenok, O., 2018. <strong><a href=https://onlinelibrary.wiley.com/doi/10.1002/9781119518068.ch1> "Lattice-Boltzmann Modelling of Multicomponent Systems: An Introduction."</strong> </a> <em>Reviews in Computational Chemistry</em>, 31, p.1. John Wiley & Sons (2018)</p>
 
-<p>81. Kuksenok, O., Liu, Y., Balazs, A.C. <strong>"Modeling Gel-based Artificial Cilia."</strong> <em>Atlas of Cilia Bioengineering and Biocomputing</em>, 149 (2018)</p>
+<p>82. Kuksenok, O., Liu, Y., Balazs, A.C. <strong><a href=https://books.google.com/books/about/Atlas_of_Cilia_Bioengineering_and_Biocom.html?id=N4RBuAEACAAJ> "Modeling Gel-based Artificial Cilia."</a> </strong> <em>Atlas of Cilia Bioengineering and Biocomputing</em>, 149 (2018)</p>
 
-<p>80. Choudhury, C.K., Tu, S., Luzinov, I., Minko, S., Kuksenok, O., <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R>"Designing Highly Thermostable Lysozyme-Copolymer Conjugates: Focus on Effect of Polymer Concentration"</a></strong> <em>Biomacromolecules</em> 19 (4), 1175-1188 (2018) </p>
+<p>81. Choudhury, C.K., Tu, S., Luzinov, I., Minko, S., Kuksenok, O., <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R>"Designing Highly Thermostable Lysozyme-Copolymer Conjugates: Focus on Effect of Polymer Concentration"</a></strong> <em>Biomacromolecules</em> 19 (4), 1175-1188 (2018) </p>
 
-<p>79. Xiong, Y., Dayal, P., Balazs, A.C., Kuksenok, O., <strong><a href=https://onlinelibrary.wiley.com/doi/full/10.1002/ijch.201700137
+<p>80. Xiong, Y., Dayal, P., Balazs, A.C., Kuksenok, O., <strong><a href=https://onlinelibrary.wiley.com/doi/full/10.1002/ijch.201700137
 >"Phase Transitions and Pattern Formation in Chemo‐Responsive Gels and Composites"</strong></a> Israel Journal of Chemistry (2018).</p>
 
 
-<p>78. Choudhury, C.K., Kuksenok, O., <strong><a href=https://www.cambridge.org/core/journals/mrs-advances/article/modeling-dynamics-of-polyacrylamide-gel-in-oilwater-mixtures-dissipative-particle-dynamics-approach/83EE1348E6F224646C738462D7AC39A3
+<p>79. Choudhury, C.K., Kuksenok, O., <strong><a href=https://www.cambridge.org/core/journals/mrs-advances/article/modeling-dynamics-of-polyacrylamide-gel-in-oilwater-mixtures-dissipative-particle-dynamics-approach/83EE1348E6F224646C738462D7AC39A3
 >"Modeling dynamics of Polyacrylamide Gel in Oil-Water Mixtures: Dissipative Particle Dynamics Approach"</a></strong> MRS Advances, 1-6.</p>
 
 
-<p>77. Kuksenok, O., Singh, A., Balazs, A., <strong>"Designing polymer gels and composites that undergo bio-inspired phototactic reconfiguration and motion.</strong> <em>Bioinspiration & biomimetics</em> 13 (3), 035004 (2018)</p>
+<p>78. Kuksenok, O., Singh, A., Balazs, A., <strong>"Designing polymer gels and composites that undergo bio-inspired phototactic reconfiguration and motion.</strong> <em>Bioinspiration & biomimetics</em> 13 (3), 035004 (2018)</p>
+
+<p>77. Yong, X., Crabb, E.J, Moellers, N.M, Salib, I, McFarlin, G.T, Kuksenok, O., Balazs, A.C. <strong><a href=https://onlinelibrary.wiley.com/doi/10.1002/9781119001379.ch9
+>"Harnessing Self‐Healing Vesicles to Pick Up, Transport, and Drop Off Janus Particles"</a></strong> Self‐Assembly: From Surfactants to Nanoparticles, John Wiley & Sons, Inc. (2018) </p>
 
 
 <p>76. Yadavalli N.S., Borodinov, N., Choudhury, C.K., Quiñones-Ruiz, T., Laradji, A.M., Tu, S., Lednev, I.K., Kuksenok, O., Luzinov, I., and S. Minko. <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>"Thermal Stabilization of Enzymes with Molecular Brushes"</a></strong> ACS Catalysis 7 (12), 8675-8684
 </p>
-
 
 <p>75. Singh, A., Kuksenok, O., Johnson, J.A., Balazs, A.C., <strong>"Photo-regeneration of severed gel with iniferter-mediated photo-growth"</strong>Soft matter 13 (10), 1978-1987(2017)</p>
 
