--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
 <div class="sub">
 <span class="lbl">Approach:</span>
 <!--CHARMM36 ff, TIP3P-->
-Details in <a href=http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138</a>
+Details in <a href=http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138</a> 
 and <a href=https://cdn-pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?journalCode=bomaf6>https://cdn-pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027</a>
 	<div class="morepics">
     <img src=images/s3_i1.png>
@@ -105,7 +105,7 @@ Congratulations to Chandan and Sidong on <A href=http://pubs.acs.org/toc/accacs/
 
                 <div class="item">
                     <div class="small">
-                        <img src=images/s4_i1.png><br>
+                        <img src=images/BackCoverGreen.jpg><br>
                         <img src=images/s4_i2.png>
                     </div>
                     <div class="description">
@@ -117,6 +117,8 @@ Congratulations to Chandan and Sidong on <A href=http://pubs.acs.org/toc/accacs/
 <div class="sub">
 
                 Details in <a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e>https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e</a>
+                Congratulations on Back Cover in Soft Matter 
+                (top image on the left)! 
 
 <br><Br>3D Gel elastodynamics: 3D gLSM<Br>
 <em>O. Kuksenok et al. PRE (2008), 78 (4)<br>
