--- a/news.html
+++ b/news.html
@@ -80,7 +80,15 @@
                 <h1 class="page-header">News</h1>
             
 
+<h1 class="page-header"><small>May 2020</small></h1>
+<p> Virtual group meetings. Welcome Eric Miller!</p>
+
+ <img src="images/Zoom.png" height="240"> </p>
+
+
 <h1 class="page-header"><small>December 2019</small></h1>
+
+
 <p> MRS Fall 2019</p>
 
  <img src="images/photos/MRS1.jpg" height="210"> &nbsp;<img src="images/photos/VaibhavMRS2.jpg" height="210"></p>
@@ -91,7 +99,6 @@
 <p>Hiking trip with Prof. Pratyush Dayal form IIT Gandhinagar </p>
 <p style="width:45%">
                                       <img  src="images/photos/WithPratyush.jpg" height="270"></p>
-
 
   <h1 class="page-header"><small>August 2019</small></h1>
 
