--- a/news.html
+++ b/news.html
@@ -83,7 +83,7 @@
 <h1 class="page-header"><small>May 2020</small></h1>
 <p> Virtual group meetings. Welcome Eric Miller!</p>
 
- <img src="images/Zoom.png" height="240"> </p>
+ <img src="images/photos/Zoom.png" height="240"> </p>
 
 
 <h1 class="page-header"><small>December 2019</small></h1>
