--- a/news.html
+++ b/news.html
@@ -79,6 +79,9 @@
 
                 <h1 class="page-header">News</h1>
             
+<h1 class="page-header"><small>June 2020</small></h1>
+<p> <strong> Congratulations to Vaibhav Palkar on winning <a href="https://www.aatcc.org/jasani2020/?utm_source=AATCC&utm_campaign=824e069ecf-EMAIL_CAMPAIGN_2020_06_24_Foundation_COPY_01&utm_medium=email&utm_term=0_499a3b316a-824e069ecf-402043789"> Jasani Family Textile Scholarship! </a></strong>
+</p>
 
 <h1 class="page-header"><small>May 2020</small></h1>
 <p> Virtual group meetings. Welcome Eric Miller!</p>
@@ -106,13 +109,11 @@
 <p style="width:45%">
                                       <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" height="415px"></p><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
 
-
-
                 <h1 class="page-header"><small>July 2019</small></h1>
 
  <p>7th Annual Summer Undergraduate Research Poster Symposium; <a href="https://www.clemson.edu/science/departments/physics-astro/academics/undergrad-research/biophysics-reu/index.html">Biophysics REU</a>, Collaboration with Prof. Josh Alper (Physics Department)</p>
 <p>
-                <img src="images/photos/Kaila2_ withVaibhavREU2019.jpg" height="300">&nbsp;<img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="300"></p>
+                <img src="images/photos/Kaila2_withVaibhavREU2019.jpg" height="300">&nbsp;<img src="images/photos/Kaila3_withMitchREU2019.jpg" height="300"></p>
  <p>Pictured:<br>(left) Kaila Craig, Vaibhav Palkar;<br>(right) Kaila Craig, Mitch Woodhouse</p>
 
 
