--- a/people.html
+++ b/people.html
@@ -89,16 +89,6 @@
                 </div>
                 <div class="item">
                     <div class="small">
-                        <a name=cc><img src="images/people/choudhury.png"></a>
-                    </div>
-                    <div class="description">
-                        <p class="title">Dr. Chandan K. Choudhury</p>
-                        <p class="subtitle">Post-Doctoral Researcher</p>
-                        <p class="subtitle">ckchoud@<img src=images/emailsuffix.png height=16></p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="small">
                         <a name=st><img src="images/people/tu.bmp"></a>
                     </div>
                     <div class="description">
@@ -130,12 +120,45 @@
 
                     </div>
                 </div>
+                <div class="item">
+
+                    <div class="small">
+                        <a name=vp><img src="images/people/Olivia.png"></a>
+                    </div>
+                    <div class="description">
+                        <p class="title">Olivia Sequerth</p>
+                        <p class="subtitle">M.S. Student</p>
+
+                    </div>
+                </div>
+
+                <div class="item">
+
+                    <div class="small">
+                        <a name=vp><img src="images/people/Eric.png"></a>
+                    </div>
+                    <div class="description">
+                        <p class="title">Eric Miller </p>
+                        <p class="subtitle">Undegraduate Researcher</p>
+
+                    </div>
+                </div>
+
 
 <h1 class="page-header">Former Group Members</h1>
 
-
+<h2>Post-Doctoral Researchers</h2>
+<div class="item">
+                    <div class="small">
+                        <a name=cc><img src="images/people/choudhury.png"></a>
+                    </div>
+                    <div class="description">
+                        <p class="title">Dr. Chandan K. Choudhury</p>
+                        <p class="subtitle">Post-Doctoral Researcher, now Senior Scientist at Prescience Insilico Pvt. Bangalore, India</p>
+                    </div>
+                </div>
+                
 <h2>Graduate students</h2>
-
 <div class="item">
     <div class="small">
         <a name="os"><img src="images/people/savchak.png"></a>
@@ -143,7 +166,7 @@
     <div class="description">
         <p class="title">Oksana Savchak</p>
         <p class="subtitle">M.S. August 2018</p>
-        <p class="subtitle">now at LAM International</p>
+        <p class="subtitle">now at LAM International, Portland, OR</p>
     </div>
 </div>
 
@@ -152,11 +175,11 @@
 <p><strong>Kaila Craig</strong>, Biophysics REU, Summer 2018</p>
 <p><strong>Michaela Giltner</strong>, Advanced Material Sciences Summer REU, Summer 2018</p>
 <p><strong>Khili Khamesra</strong>, Summer Internship with Indian Institute of Technology Gandhinagar, Summer 2018
-<p><Strong>Chinmay Sonar</Strong>, Summer Internship from  Indian Institute of Technology Gandhinagar, Summer 2017; now Ph.D. student at UC Santa Barbara</p>
+<p><Strong>Chinmay Sonar</Strong>, Summer Internship with  Indian Institute of Technology Gandhinagar, Summer 2017; now Ph.D. student at UC Santa Barbara</p>
 <p><strong>Samantha  Collins</strong>, Interfaces and Surfaces REU, Summer 2017</p>
-<p><strong>Tyler Morrison</strong>, Interfaces and Surfaces REU, Summer 2016; now Ph. D. student at the Ohio State University, Columbus</p>
+<p><strong>Tyler Morrison</strong>, Interfaces and Surfaces REU, Summer 2016; now Ph. D. student at Ohio State University, Columbus</p>
 
-<h1 class="page-header">Openings</h1>
+<p><strong> <h1 class="page-header">Openings</h1> </strong></p>
 
 <p>We have several openings for Clemson undergraduate students to participate in the undergraduate research projects on computational modeling and simulation of multi-component advanced polymeric materials.  Prior experience in computational modeling (coding in C/C++) is highly desired. Applicants should send their curriculum vitae and a brief description of their research interests to Dr. Olga Kuksenok at <em>okuksen at clemson dot edu</em><br><br><br><br></p>
                 </ul>
