--- a/pubs.html
+++ b/pubs.html
@@ -78,11 +78,17 @@
                 <h1 class="page-header">Publications
                 </h1>
 
+<p> 90. Choudhury, C. K., Kuksenok, O. <strong> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</strong>, <em> Journal of Physical Chemistry B (2020) </em>, in press </p>
+
+<p> 89. Wei, L, Caliskan, T.D., Tu, S., Choudhury, C.K, Kuksenok, O, Luzinov, I. <strong><a href= https://pubs.acs.org/doi/abs/10.1021/acsami.0c08649 > "Highly Oil-Repellent Thermoplastic Boundaries via Surface Delivery of CF3 Groups by Molecular Bottlebrush Additives"</a></strong>, <em>ACS Applied Materials & Interfaces (2020) </em> 12 (34), 38626-38637 </p>
+
+<p>88.  Palkar, V., Choudhury, C. K., Kuksenok, O. <strong><a href= https://www.cambridge.org/core/journals/mrs-advances/article/development-of-dissipative-particle-dynamics-framework-for-modeling-hydrogels-with-degradable-bonds/CDC9885D7BEEAD54B908870669A68923
+>"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em>MRS Advances (2020)</em>, 5(17), 927-934 </p>
 
 <p>87. Choudhury, C. K.,  Palkar, V., Kuksenok, O. <strong><a href= https://pubs.acs.org/doi/pdf/10.1021/acs.langmuir.9b03486  
->"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020)</em> </p>
+>"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020) 36, 25, 7109–7123</em> </p>
 
-<p>86. Palkar, V., Aprelev, V.,  Salamatin, A., Brasovs. A., Kuksenok, O,,  Kornev, K.G.  <strong><a href= https://journals.aps.org/pre/abstract/10.1103/PhysRevE.100.051101
+<p>86. Palkar, V., Aprelev, V.,  Salamatin, A., Brasovs. A., Kuksenok, O, Kornev, K.G.  <strong><a href= https://journals.aps.org/pre/abstract/10.1103/PhysRevE.100.051101
  
 >"Rotating magnetic nanorods detect minute fluctuations of magnetic field”</a></strong>. Phys. Rev. E 100, 051101 (2019) </p>
 
