--- a/people.html
+++ b/people.html
@@ -135,7 +135,7 @@
                 <div class="item">
 
                     <div class="small">
-                        <a name=vp><img src="images/people/Eric.png"></a>
+                        <a name=vp><img src="images/people/Eric.jpg"></a>
                     </div>
                     <div class="description">
                         <p class="title">Eric Miller </p>
