images arranged index

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                     <img src=images/FrontCoverArt.png width=200></a></div>  -->
 
 <div class="illustration" style="width:40%;max-width:400px">
-                    <a href=https://reader.elsevier.com/reader/sd/pii/S1359028618301827?token=A9B7D8F652579780E5858E3B6669221E75DFE584A7D37A36DBD188EDD3CE1212A01CF51076D02D2690C5F7E0817756E1><img src=images/Picture1.png width=110></a>
-                    <a href=projects.html><img src=images/FrontCoverArt.png width=140></a>
-                    <a href=projects.html><img src=images/Patterns.png width=110></a>
-                    <a href=projects.html><img src=images/Degrade.png width=140></a>
-                    <a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R><img src=images/s3_i4.png width=110>
-                    <a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e><img src=images/BackCoverGreen.jpg width=140>
+                    <a href=https://reader.elsevier.com/reader/sd/pii/S1359028618301827?token=A9B7D8F652579780E5858E3B6669221E75DFE584A7D37A36DBD188EDD3CE1212A01CF51076D02D2690C5F7E0817756E1><img src=images/Picture1.png width=80></a>
+                    <a href=projects.html><img src=images/FrontCoverArt.png width=100></a><br><br>
+                    <a href=projects.html><img src=images/Patterns.png width=80></a>
+                    <a href=projects.html><img src=images/Degrade.png width=100></a><br><br>
+                    <a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R><img src=images/s3_i4.png width=80>
+                    <a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e><img src=images/BackCoverGreen.jpg width=100>
 
               
               </a></div> 
