Images enlaged on hover

--- a/projects.html
+++ b/projects.html
@@ -81,10 +81,11 @@
                 <h1 class="page-header">Projects</h1>
 
         <!-- PROJECT 1-Degradation -->
-                    <div class="item">
-                        <div class="small">
+                        <div class="item">
+                            <div class="small small_enlargeable">
                         <img src=images/Degrade.png>
                     </div>
+
                     <div class="description">
                         <p class="bigtitle">Mesoscale Modeling of Degradation and Erosion  </p>
                             <p class="title">Understanding and controlling the degradation of polymer networks plays a vital role in a variety of applications. Degradable hydrogels find their use in controlled drugs delivery, wound dressings design, as cell culture platforms, and as photolithographic materials.  We are developing Dissipative Particle Dynamics framework that captures erosion, reverse gelation, and elasticity of controllably degrading polymer networks.  In addition, we are also developing mesoscale approach to model chain scission during controlled degradation of thermoplastics to optimize recycling and reuse. </p>
@@ -100,9 +101,9 @@
                                 </div>
 
         <!-- PROJECT 2-Biomolecules  -->
-                    <div class="item">
-                        <div class="small">
-                        <img src=images/FrontCoverArt.png><br>
+                        <div class="item">
+                            <div class="small small_enlargeable">
+                                        <img src=images/FrontCoverArt.png><br>
                     </div>
                     <div class="description">
                         <p class="bigtitle">Mesoscale Modeling of Biomaterials </p>
@@ -119,8 +120,8 @@
                                 </div>
 
         <!-- PROJECT 3 -YAO -->
-                    <div class="item">
-                        <div class="small">
+                        <div class="item">
+                            <div class="small small_enlargeable">
                         <img src=images/Patterns.png><br>
 
                     </div>
@@ -136,8 +137,8 @@
                                 </div>
 
         <!-- PROJECT 4 -MBB -->
-                    <div class="item">
-                        <div class="small">
+                        <div class="item">
+                            <div class="small small_enlargeable">
                         <img src=images/MBB.png><br>
 
                     </div>
@@ -214,8 +215,11 @@ Publications:
         </div>
 
 
-
-
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <!-- /.row -->
 
     </div>
