--- a/news.html
+++ b/news.html
@@ -82,6 +82,10 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>December 2020</small></h1>
+<p> <strong> Congratulations to Chandan Choudhury: Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
+</p>
+
 <h1 class="page-header"><small>June 2020</small></h1>
 <p> <strong> Congratulations to Vaibhav Palkar on winning <a href="https://www.aatcc.org/jasani2020/?utm_source=AATCC&utm_campaign=824e069ecf-EMAIL_CAMPAIGN_2020_06_24_Foundation_COPY_01&utm_medium=email&utm_term=0_499a3b316a-824e069ecf-402043789"> Jasani Family Textile Scholarship! </a></strong>
 </p>
