--- a/pubs.html
+++ b/pubs.html
@@ -81,7 +81,7 @@
                 <h1 class="page-header">Publications
                 </h1>
 
-<p> 90. Choudhury, C. K., Kuksenok, O. <strong> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</strong>, <em> Journal of Physical Chemistry B (2020) </em>, in press </p>
+<p> 90. Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
 
 <p> 89. Wei, L, Caliskan, T.D., Tu, S., Choudhury, C.K, Kuksenok, O, Luzinov, I. <strong><a href= https://pubs.acs.org/doi/abs/10.1021/acsami.0c08649 > "Highly Oil-Repellent Thermoplastic Boundaries via Surface Delivery of CF3 Groups by Molecular Bottlebrush Additives"</a></strong>, <em>ACS Applied Materials & Interfaces (2020) </em> 12 (34), 38626-38637 </p>
 
