--- a/news.html
+++ b/news.html
@@ -82,8 +82,14 @@
 
                 <h1 class="page-header">News</h1>
 
+
+                
 <h1 class="page-header"><small>December 2020</small></h1>
-<p> <strong> Congratulations to Chandan Choudhury: Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
+
+<p> <strong> Congratulations to Eric Miller on winning  <a href= https://materials.typepad.com/mrs_meeting_scene/2020/12/best-poster-winners-2020-mrs-fall-meeting.html> Best Poster Award at 2020 Fall MRS Meeting </a></strong> </p>
+</p>
+
+<p> Congratulations to Chandan Choudhury: Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
 </p>
 
 <h1 class="page-header"><small>June 2020</small></h1>
