--- a/news.html
+++ b/news.html
@@ -88,8 +88,18 @@
 
 <p> <strong> Congratulations to Eric Miller on winning  <a href= https://materials.typepad.com/mrs_meeting_scene/2020/12/best-poster-winners-2020-mrs-fall-meeting.html> Best Poster Award at 2020 Fall MRS Meeting </a></strong> </p>
 </p>
+<img src="images/EricMRS.jpg" height="360"> </p>
 
-<p> Congratulations to Chandan Choudhury: Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
+<p> 
+    Poster: <strong>Miller, E.,</strong>  Palkar, V., Kuksenok, O., <em> Mesoscale Modeling of Controlled Erosion of Tetra-Arm Polyethylene Glycol Based Nanogels </em>2020 Virtual MRS Meeting.
+   </p> ******************************************
+<p>
+  </p> ******************************************
+<p>
+</p> 
+
+<strong>   Congratulations to Chandan Choudhury on his recent publication: </strong> </p>
+    Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
 </p>
 
 <h1 class="page-header"><small>June 2020</small></h1>
@@ -114,13 +124,13 @@
 
 <p>Hiking trip with Prof. Pratyush Dayal form IIT Gandhinagar </p>
 <p style="width:45%">
-                                      <img  src="images/photos/WithPratyush.jpg" height="270"></p>
+                                      <img  src="images/photos/WithPratyush.jpg" height="285"></p>
 
   <h1 class="page-header"><small>August 2019</small></h1>
 
 <p>Congratulations to Vaibhav Palkar for winning the best poster award (1st place) at the sixth LAMMPS Workshop and Symposium organized by LAMMPS development team at Sandia Labs in Albuquerque, NM (Aug 2019).</p>
 <p style="width:45%">
-                                      <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" height="415px"></p><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
+                                      <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" height="440px"></p><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
 
                 <h1 class="page-header"><small>July 2019</small></h1>
 
@@ -151,7 +161,7 @@
 Congratulations to Oksana Savchak!<br><br>
 
 
-<img src="images/photos/OksanaAug2018.jpg" height=350>
+<img src="images/photos/OksanaAug2018.jpg" height=360>
 
 
 
