--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,9 @@
                                     <span class="lbl">Image credit: Chandan K. Choudhury </span>
                                             </div>
                                                 <p>Publications: </p>
-                                                Choudhury, C. K., Kuksenok, O. <strong> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</strong>, <em> Journal of Physical Chemistry B (2020) </em>, in press </p>
+
+    Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
+</p>
 
 
                                             </div>
