--- a/news.html
+++ b/news.html
@@ -83,7 +83,12 @@
                 <h1 class="page-header">News</h1>
 
 
-                
+<h1 class="page-header"><small>April 2021</small></h1>
+
+<strong>   Congratulations to Yao Xiong on his recent publication: </strong> </p>
+   <p> Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> Langmuir (2021) </em> </p>
+</p>
+
 <h1 class="page-header"><small>December 2020</small></h1>
 
 <p> <strong> Congratulations to Eric Miller on winning  <a href= https://materials.typepad.com/mrs_meeting_scene/2020/12/best-poster-winners-2020-mrs-fall-meeting.html> Best Poster Award at 2020 Fall MRS Meeting </a></strong> </p>
@@ -92,8 +97,7 @@
 
 <p> 
     Poster: <strong>Miller, E.,</strong>  Palkar, V., Kuksenok, O., <em> Mesoscale Modeling of Controlled Erosion of Tetra-Arm Polyethylene Glycol Based Nanogels </em>2020 Virtual MRS Meeting.
-   </p> ******************************************
-<p>
+  
   </p> ******************************************
 <p>
 </p> 
