--- a/projects.html
+++ b/projects.html
@@ -80,26 +80,27 @@
             <div class="col-lg-12">
                 <h1 class="page-header">Projects</h1>
 
-        <!-- PROJECT 1-Degradation -->
+       <!-- PROJECT 3 -YAO -->
                         <div class="item">
                             <div class="small small_enlargeable">
-                        <img src=images/Degrade.png>
+                        <img src=images/Patterns.png><br>
+
                     </div>
-
                     <div class="description">
-                        <p class="bigtitle">Mesoscale Modeling of Degradation and Erosion  </p>
-                            <p class="title">Understanding and controlling the degradation of polymer networks plays a vital role in a variety of applications. Degradable hydrogels find their use in controlled drugs delivery, wound dressings design, as cell culture platforms, and as photolithographic materials.  We are developing Dissipative Particle Dynamics framework that captures erosion, reverse gelation, and elasticity of controllably degrading polymer networks.  In addition, we are also developing mesoscale approach to model chain scission during controlled degradation of thermoplastics to optimize recycling and reuse. </p>
-                                <p class="subtitle"><Strong> Vaibhav Palkar, Eric Miller </a></Strong></p>
-                                                <p>Related publications (modeling hydrogels):
+                        <p class="bigtitle">Dynamic Control of Pattern Formation in Responsive Networks </p>
+                            <p class="title">Pattern formation plays a critical role in nature, from spontaneous organization in flocks and crowds to organs development during morphogenesis. Controlling pattern formation in synthetic materials could allow one to control a wide range of functionalities. Using continuum modeling (gel Lattice Spring Model ), we focus on dynamic control of pattern formation in confined responsive hydrogels. </p>
+                                <p class="subtitle"><Strong> Yao Xiong</a></Strong></p>
+                                <div class="sub">
 
-                                                <p>Palkar, V., Choudhury, C. K., Kuksenok, O. <strong><a href= https://www.cambridge.org/core/journals/mrs-advances/article/development-of-dissipative-particle-dynamics-framework-for-modeling-hydrogels-with-degradable-bonds/CDC9885D7BEEAD54B908870669A68923
-                                                >"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em>MRS Advances (2020)</em> </p>
-                                                Choudhury, C. K.,  Palkar, V., Kuksenok, O. <strong><a href= https://pubs.acs.org/doi/pdf/10.1021/acs.langmuir.9b03486
->"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020) 36, 25, 7109–7123
+                                            <div
+                                            <p> Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> Langmuir (2021) </em> </p>
 
+                                            </div>
+                                            <p> Xiong, Y. et al <strong><a href=https://onlinelibrary.wiley.com/doi/full/10.1002/ijch.201700137>"Phase Transitions and Pattern Formation in Chemo‐Responsive Gels and Composites"</strong></a> Israel Journal of Chemistry (2018).</p>
                                             </div>
                                 </div>
 
+  
         <!-- PROJECT 2-Biomolecules  -->
                         <div class="item">
                             <div class="small small_enlargeable">
@@ -121,20 +122,23 @@
                                             </div>
                                 </div>
 
-        <!-- PROJECT 3 -YAO -->
+        <!-- PROJECT 1-Degradation -->
                         <div class="item">
                             <div class="small small_enlargeable">
-                        <img src=images/Patterns.png><br>
-
+                        <img src=images/Degrade.png>
                     </div>
-                    <div class="description">
-                        <p class="bigtitle">Dynamic Control of Pattern Formation in Responsive Networks </p>
-                            <p class="title">Pattern formation plays a critical role in nature, from spontaneous organization in flocks and crowds to organs development during morphogenesis. Controlling pattern formation in synthetic materials could allow one to control a wide range of functionalities. Using continuum modeling (gel Lattice Spring Model ), we focus on dynamic control of pattern formation in confined responsive hydrogels. </p>
-                                <p class="subtitle"><Strong> Yao Xiong</a></Strong></p>
-                                <div class="sub">
 
-                                            </div>
-                                                Publications: <p> Xiong, Y. et al <strong><a href=https://onlinelibrary.wiley.com/doi/full/10.1002/ijch.201700137>"Phase Transitions and Pattern Formation in Chemo‐Responsive Gels and Composites"</strong></a> Israel Journal of Chemistry (2018).</p>
+                    <div class="description">
+                        <p class="bigtitle">Mesoscale Modeling of Degradation and Erosion  </p>
+                            <p class="title">Understanding and controlling the degradation of polymer networks plays a vital role in a variety of applications. Degradable hydrogels find their use in controlled drugs delivery, wound dressings design, as cell culture platforms, and as photolithographic materials.  We are developing Dissipative Particle Dynamics framework that captures erosion, reverse gelation, and elasticity of controllably degrading polymer networks.  In addition, we are also developing mesoscale approach to model chain scission during controlled degradation of thermoplastics to optimize recycling and reuse. </p>
+                                <p class="subtitle"><Strong> Vaibhav Palkar, Eric Miller </a></Strong></p>
+                                                <p>Related publications (modeling hydrogels):
+
+                                                <p>Palkar, V., Choudhury, C. K., Kuksenok, O. <strong><a href= https://www.cambridge.org/core/journals/mrs-advances/article/development-of-dissipative-particle-dynamics-framework-for-modeling-hydrogels-with-degradable-bonds/CDC9885D7BEEAD54B908870669A68923
+                                                >"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em>MRS Advances (2020)</em> </p>
+                                                Choudhury, C. K.,  Palkar, V., Kuksenok, O. <strong><a href= https://pubs.acs.org/doi/pdf/10.1021/acs.langmuir.9b03486
+>"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020) 36, 25, 7109–7123
+
                                             </div>
                                 </div>
 
