--- a/news.html
+++ b/news.html
@@ -85,6 +85,13 @@
 
 <h1 class="page-header"><small>April 2021</small></h1>
 
+<p> <strong> Congratulations to Eric Miller </a></strong> on winning the Third Place Poster Award at the Undergraduate Research in Polymer Science Symposium at the 2021 Spring National American Chemical Society meeting. The award is sponsored by the POLY/PMSE MACRO committee. </p>
+<p> 
+    Poster: <strong>Miller, E.,</strong>  Palkar, V., Kuksenok, O., <em> Mesoscale modeling of nanogel degradation: effect of crosslink density and particle size </em>
+  
+  </p> ******************************************
+
+<p> 
 <strong>   Congratulations to Yao Xiong on his recent publication: </strong> </p>
    <p> Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> Langmuir (2021) </em> </p>
 </p>
